--- a/ROP/ROP/Content/style.css
+++ b/ROP/ROP/Content/style.css
@@ -38,12 +38,7 @@ ul {
 
 li {
     float: left;
-    border-right: 1px solid #bbb;
 }
-
-    li:last-child {
-        border-right: none;
-    }
 
     li a {
         display: block;
@@ -53,10 +48,6 @@ li {
         text-decoration: none;
     }
 
-        li a:hover:not(.active) {
-            background-color: #333;
+        li a:hover {
+            background-color: #111;
         }
-
-.active {
-    background-color: #12497F
-}
