Cambios del diseño

--- a/ROP/ROP/Content/style.css
+++ b/ROP/ROP/Content/style.css
@@ -1,3 +1,12 @@
+* {
+    box-sizing: border-box;
+}
+
+body {
+    font-family: Verdana;
+}
+
+
 [type="date"] {
     background: #fff url(https://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/calendar_2.png) 97% 50% no-repeat;
 }
@@ -16,53 +25,6 @@ label {
     display: block;
 }
 
-input[type=date] {
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-}
-
-
-
-body {
-    font-family: Verdana;
-}
-
-input[type=text], select {
-
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-}
-
-input[type=submit] {
-    background-color: #14487E;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-input[type=reset] {
-    background-color: #14487E;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-    input[type=submit]:hover {
-        background-color: #78B8E5;
-    }
 
 
 
@@ -90,3 +52,96 @@ li {
             background-color: #111;
         }
 
+
+
+/*after this*/
+
+
+input[type=text], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: vertical;
+}
+
+label {
+    padding: 12px 12px 12px 0;
+    display: inline-block;
+}
+
+input[type=submit] {
+    background-color: #14487E;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type=reset] {
+    background-color: #14487E;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type=submit]:hover {
+    background-color: #78B8E5;
+}
+
+input[type=reset]:hover {
+    background-color: #78B8E5;
+}
+
+.container {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+    width: 50%;
+}
+
+.col-25 {
+    float: left;
+    width: 25%;
+    margin-top: 6px;
+}
+
+.col-75 {
+    float: left;
+    width: 75%;
+    margin-top: 6px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.info {
+    background-color: #e7f3fe;
+    border-left: 6px solid #2196F3;
+    display: inline-block;
+}
+
+
+
+
+/* Responsive */
+@media screen and (max-width: 600px) {
+
+    .container {
+        width: 100%;
+    }
+
+    .col-25, .col-75, input[type=submit], input[type=reset] {
+        width: 100%;
+        margin-top: 0;
+    }
+}
