--- a/ROP/ROP/Content/style.css
+++ b/ROP/ROP/Content/style.css
@@ -1,73 +1,94 @@
-* {
-    box-sizing: border-box;
-}
-
+﻿
 body {
-    font-family: Verdana;
+    background: #fff;
+    font-family: "Roboto", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
-
-[type="date"] {
-    background: #fff url(https://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/calendar_2.png) 97% 50% no-repeat;
-}
-
-    [type="date"]::-webkit-inner-spin-button {
-        display: none;
-    }
-
-    [type="date"]::-webkit-calendar-picker-indicator {
-        opacity: 0;
-    }
-
-/* custom styles */
-
-label {
+/*body:before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
     display: block;
-}
-
-
-
-
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-}
-
-li {
-    float: left;
-}
-
-    li a {
-        display: block;
-        color: white;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-    }
-
-        li a:hover {
-            background-color: #111;
-        }
-
-
-
-/*after this*/
-
-
-input[type=text], select, textarea {
+    background: rgba(255, 255, 255, 0.8);
     width: 100%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    resize: vertical;
+    height: 100%;
+}*/
+
+
+
+/* Form */
+.form {
+    position: relative;
+    z-index: 1;
+    background: #fff;
+    max-width: 300px;
+    margin: 0 auto 100px;
+    padding: 30px;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+    text-align: center;
 }
 
-label {
-    padding: 12px 12px 12px 0;
-    display: inline-block;
+
+
+.form input {
+    outline: 0;
+    background: #f2f2f2;
+    width: 100%;
+    border: 0;
+    margin: 0 0 15px;
+    padding: 15px;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+    box-sizing: border-box;
+    font-size: 14px;
+}
+
+.container {
+    position: relative;
+    z-index: 1;
+    max-width: 300px;
+    margin: 0 auto;
+}
+
+.container:before, .container:after {
+    content: "";
+    display: block;
+    clear: both;
+}
+
+.container .info {
+    margin: 50px auto;
+    text-align: center;
+}
+
+.container .info h1 {
+    margin: 0 0 15px;
+    padding: 0;
+    font-size: 36px;
+    font-weight: 300;
+    color: #1a1a1a;
+}
+
+.container .info span {
+    color: #4d4d4d;
+    font-size: 12px;
+}
+
+.container .info span a {
+    color: #000000;
+    text-decoration: none;
+}
+
+.container .info span .fa {
+    color: #EF3B3A;
 }
 
 input[type=submit] {
@@ -98,50 +119,24 @@ input[type=reset]:hover {
     background-color: #78B8E5;
 }
 
-.container {
-    border-radius: 5px;
-    background-color: #f2f2f2;
-    padding: 20px;
-    width: 50%;
+/*input[type=radio] {
+
+}*/
+
+.FormArea input[type=radio] {
+    float: right;
 }
 
-.col-25 {
-    float: left;
-    width: 25%;
-    margin-top: 6px;
+
+
+.input-group .input-group-addon {
+    border:none;
 }
 
-.col-75 {
-    float: left;
-    width: 75%;
-    margin-top: 6px;
-}
-
-/* Clear floats after the columns */
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-.info {
+.tasa {
+    display: inline-block;
     background-color: #e7f3fe;
     border-left: 6px solid #2196F3;
-    display: inline-block;
+    word-wrap: break-word;
 }
 
-
-
-
-/* Responsive */
-@media screen and (max-width: 600px) {
-
-    .container {
-        width: 100%;
-    }
-
-    .col-25, .col-75, input[type=submit], input[type=reset] {
-        width: 100%;
-        margin-top: 0;
-    }
-}
