--- a/ROP/ROP/Content/style.css
+++ b/ROP/ROP/Content/style.css
@@ -140,3 +140,30 @@ input[type=reset]:hover {
     border-color: ActiveBorder;
 }
 
+.container-all {
+    width: 100%;
+    min-height: 100vh;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
+    background: #fff;
+}
+
+
+.wrap-form {
+    width: 800px;
+    background: #fff;
+    border-radius: 10px;
+    padding: 42px 55px 45px 55px;
+    max-width: 900px;
+}
+
+}
+
+
